--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Ubuntu:500&display=swap" rel="stylesheet">
   <!-- css stylesheets -->
